@@ -63,6 +63,7 @@ class tx_solr_pi_results_ResultsCommand implements tx_solr_Command {
 			'range' => $this->getPageBrowserRange(),
 			'count' => $this->search->getNumberOfResults(),
 			'offset' => ($this->search->getResultOffset() + 1),
+			'query_time' => $this->search->getQueryTime(),
 				/* construction of the array key:
 				 * loop_ : tells the plugin that the content of that field should be processed in a loop
 				 * result_documents : is the loop name as in the template
